// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalCrowdfundingCard /> by default matches with snapshot 1`] = `
<a
  className="sc-gsDKAQ diGCSc k-HorizontalCrowdfundingCard k-HorizontalCrowdfundingCard--noProgressOnMobile"
  href="#"
>
  <div
    className="k-HorizontalCrowdfundingCard__imageWrapper"
  >
    <img
      alt=""
      src="#image"
    />
  </div>
  <h3
    className="k-u-size-tiny k-u-weight-regular k-HorizontalCrowdfundingCard__title"
  >
    Custom title
  </h3>
  <p
    className="k-u-size-micro k-u-weight-light k-HorizontalCrowdfundingCard__description"
  >
    Custom description
  </p>
  <div
    className="k-HorizontalCrowdfundingCard__info"
  >
    <span>
      Test info
    </span>
  </div>
  <div
    className="k-HorizontalCrowdfundingCard__progress"
  >
    <div
      aria-label="progression"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="sc-bdvvtL dMgDfH k-Meters-Progress k-HorizontalCrowdfundingCard__progress__ramp"
      role="progressbar"
      style={
        Object {
          "--progress-color": "transparent",
          "--progress-value": "0%",
        }
      }
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": 4,
          }
        }
      />
    </div>
    <span
      className="k-u-size-micro k-u-weight-light k-HorizontalCrowdfundingCard__progress__value"
    >
      50
       %
    </span>
  </div>
</a>
`;

exports[`<HorizontalCrowdfundingCard /> with noProgress prop matches with snapshot 1`] = `
<a
  className="sc-gsDKAQ diGCSc k-HorizontalCrowdfundingCard"
  href="#"
>
  <div
    className="k-HorizontalCrowdfundingCard__imageWrapper"
  >
    <img
      alt=""
      src="#image"
    />
  </div>
  <h3
    className="k-u-size-tiny k-u-weight-regular k-HorizontalCrowdfundingCard__title"
  >
    Custom title
  </h3>
  <p
    className="k-u-size-micro k-u-weight-light k-HorizontalCrowdfundingCard__description"
  >
    Custom description
  </p>
  <div
    className="k-HorizontalCrowdfundingCard__info"
  >
    <span>
      Test info
    </span>
  </div>
</a>
`;
